Add Swagger documentation and rework API path
