# RESTService/routes/booking.js
@@ -1,6 +1,6 @@
 const controller = require('../controllers/booking');
 const router = require('express').Router();
 
-router.put('/:id/CLASS/:class/SEATS/:seats', controller.updateSeats);
+router.put('/booking/:id/CLASS/:class/SEATS/:seats', controller.updateSeats);
 
 module.exports = router;
