# RESTService/routes/tests.js
@@ -1,7 +1,7 @@
 const controller = require('../controllers/tests');
 const router = require('express').Router();
 
-router.get('/hello/:name', controller.helloWorld);
-router.get('/db', controller.dbConnection);
+router.get('/tests/hello/:name', controller.helloWorld);
+router.get('/tests/db', controller.dbConnection);
 
 module.exports = router;
